<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/add_menu"
        android:icon="@drawable/recommend_school_add_icon"
        android:orderInCategory="100"
        yourapp:showAsAction="ifRoom"
        android:title="@string/recomemnd_course_str"/>
    <item
        android:orderInCategory="100"
        android:id="@+id/menu_more"
        android:icon="@drawable/menu_more"
        yourapp:showAsAction="ifRoom"
        android:title="@string/menu_more_str">
        <menu>
            <item
                android:orderInCategory="100"
                android:id="@+id/setting_menu"
                android:icon="@drawable/setting"
                yourapp:showAsAction="ifRoom"
                android:title="@string/setting_str">
            </item>
            <item
                android:orderInCategory="100"
                android:id="@+id/exit_menu"
                android:icon="@drawable/setting"
                yourapp:showAsAction="ifRoom"
                android:title="@string/exit_str">
            </item>
        </menu>
    </item>

    <group>
    </group>

</menu>