<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:background="@drawable/actionbar_bg"
    android:id="@+id/nav_bottom_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:clickable="true"
        android:id="@+id/nav_courselist_btn"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.edusoho.kuozhi.view.EduSohoIconView
            android:textColor="@color/nav_btn_sel"
            android:textSize="@dimen/navBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_cloud" />
        <TextView
            android:textSize="@dimen/navBtnText"
            android:text="课程"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:id="@+id/nav_learn_btn"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.edusoho.kuozhi.view.EduSohoIconView
            android:textColor="@color/nav_btn_sel"
            android:textSize="@dimen/navBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_learning" />
        <TextView
            android:textSize="@dimen/navBtnText"
            android:text="在学"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:id="@+id/nav_column_btn"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.edusoho.kuozhi.view.EduSohoIconView
            android:textColor="@color/nav_btn_sel"
            android:textSize="@dimen/navBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_learning" />
        <TextView
            android:textSize="@dimen/navBtnText"
            android:text="类别"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:id="@+id/nav_my_btn"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.edusoho.kuozhi.view.EduSohoIconView
            android:textColor="@color/nav_btn_sel"
            android:textSize="@dimen/navBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_user" />
        <TextView
            android:text="我的"
            android:textSize="@dimen/navBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>